complete group routing with multiple module and component

--- a/src/app/dynamic/dynamic-admin/dynamic-admin.component.html
+++ b/src/app/dynamic/dynamic-admin/dynamic-admin.component.html
@@ -1,1 +1,9 @@
-<p>dynamic-admin works!</p>
+<h3>Dynamic Component Load</h3>
+<ul class="dynamic-admin">
+  <li><a routerLink="dynamic-data">Dynamic-Data</a></li>
+  <li><a routerLink="dynamic-list">Dynamic-List</a></li>
+  <li><a routerLink="dynamic-user">Dynamic-User</a></li>
+</ul>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
