--- a/src/app/dynamic/dynamic.component.html
+++ b/src/app/dynamic/dynamic.component.html
@@ -1,1 +1,10 @@
-<p>dynamic works!</p>
+<h3>Dynamic Component Load</h3>
+<div class="main-navbar">
+  <ul class="dynamic-nav">
+    <li><a routerLink="dynamic-admin">Dynamic-Admin</a></li>
+    <li><a routerLink="dynamic-dashboard">Dynamic-Dashboard</a></li>
+  </ul>
+</div>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
