--- a/src/app/employee/employee-tag/employee-tag.component.html
+++ b/src/app/employee/employee-tag/employee-tag.component.html
@@ -1,1 +1,9 @@
-<p>employee-tag works!</p>
+<h3>Employee Tag Load</h3>
+<ul class="employee-tag">
+  <li><a routerLink="employee-add">Employee-Add</a></li>
+  <li><a routerLink="employee-move">Employee-Move</a></li>
+</ul>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
+
