--- a/src/app/student/student-admin/student-admin.component.html
+++ b/src/app/student/student-admin/student-admin.component.html
@@ -1,1 +1,8 @@
-<p>student-admin works!</p>
+<h3>Student Admin Load</h3>
+<ul class="student-admin">
+  <li><a routerLink="student-data">student-Data</a></li>
+  <li><a routerLink="student-user">student-User</a></li>
+</ul>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
