--- a/src/app/student/student-tag/student-tag.component.html
+++ b/src/app/student/student-tag/student-tag.component.html
@@ -1,1 +1,9 @@
-<p>student-tag works!</p>
+<h3>Student Tag Load</h3>
+<ul class="student-tag">
+  <li><a routerLink="student-add">student-Add</a></li>
+  <li><a routerLink="student-rejoin">student-Rejoin</a></li>
+  <li><a routerLink="student-remove">student-Remove</a></li>
+</ul>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
