--- a/src/app/user/user-title/user-title.component.html
+++ b/src/app/user/user-title/user-title.component.html
@@ -1,1 +1,11 @@
-<p>user-title works!</p>
+<h3>User Title Load</h3>
+<ul class="user-title">
+  <li><a routerLink="user-cancel">User-Cancel</a></li>
+  <li><a routerLink="user-first">User-First</a></li>
+  <li><a routerLink="user-last">User-Last</a></li>
+  <li><a routerLink="user-middle">User-Middle</a></li>
+</ul>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
+
