--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,13 @@
-<p>user works!</p>
+<h3>User Component Load</h3>
+<div class="main-navbar">
+  <ul class="user-nav">
+    <li><a routerLink="user-admin">User-Admin</a></li>
+    <li><a routerLink="user-dashboard">User-Dashboard</a></li>
+    <li><a routerLink="user-tag">User-Tag</a></li>
+    <li><a routerLink="user-title">User-Title</a></li>
+  </ul>
+</div>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
+
