--- a/src/app/dynamic/dynamic-dashboard/dynamic-dashboard.component.html
+++ b/src/app/dynamic/dynamic-dashboard/dynamic-dashboard.component.html
@@ -1,1 +1,8 @@
-<p>dynamic-dashboard works!</p>
+<h3>Dynamic Component Load</h3>
+<ul class="dynamic-dash">
+  <li><a routerLink="dynamic-item">Dynamic-Item</a></li>
+  <li><a routerLink="dynamic-order">Dynamic-Order</a></li>
+</ul>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
