--- a/src/app/employee/employee-admin/employee-admin.component.html
+++ b/src/app/employee/employee-admin/employee-admin.component.html
@@ -1,1 +1,9 @@
-<p>employee-admin works!</p>
+<h3>Employee Admin Load</h3>
+<ul class="employee-admin">
+  <li><a routerLink="employee-data">Employee-Data</a></li>
+  <li><a routerLink="employee-list">Employee-List</a></li>
+  <li><a routerLink="employee-user">Employee-User</a></li>
+</ul>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
