--- a/src/app/employee/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/employee/employee-dashboard/employee-dashboard.component.html
@@ -1,1 +1,8 @@
-<p>employee-dashboard works!</p>
+<h3>Employee Dashboard Load</h3>
+<ul class="employee-dash">
+  <li><a routerLink="employee-item">Employee-Item</a></li>
+  <li><a routerLink="employee-order">Employee-Order</a></li>
+</ul>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
