--- a/src/app/student/student-dashboard/student-dashboard.component.html
+++ b/src/app/student/student-dashboard/student-dashboard.component.html
@@ -1,1 +1,8 @@
-<p>student-dashboard works!</p>
+<h3>Student Dashboard Load</h3>
+<ul class="student-admin">
+  <li><a routerLink="student-item">student-Item</a></li>
+  <li><a routerLink="student-order">student-Order</a></li>
+</ul>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
