--- a/src/app/user/user-admin/user-admin.component.html
+++ b/src/app/user/user-admin/user-admin.component.html
@@ -1,1 +1,8 @@
-<p>user-admin works!</p>
+<h3>User Admin Load</h3>
+<ul class="user-admin">
+  <li><a routerLink="user-data">User-Data</a></li>
+  <li><a routerLink="user-user">User-User</a></li>
+</ul>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
