--- a/src/app/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/user/user-dashboard/user-dashboard.component.html
@@ -1,1 +1,9 @@
-<p>user-dashboard works!</p>
+<h3>User Dashboard Load</h3>
+<ul class="user-admin">
+  <li><a routerLink="user-item">User-Item</a></li>
+  <li><a routerLink="user-order">User-Order</a></li>
+  <li><a routerLink="user-track">User-Track</a></li>
+</ul>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
