--- a/src/app/user/user-tag/user-tag.component.html
+++ b/src/app/user/user-tag/user-tag.component.html
@@ -1,1 +1,9 @@
-<p>user-tag works!</p>
+<h3>User Tag Load</h3>
+<ul class="user-tag">
+  <li><a routerLink="user-add">User-Add</a></li>
+  <li><a routerLink="user-leave">User-Leave</a></li>
+  <li><a routerLink="user-work">User-Work</a></li>
+</ul>
+<div class="outlet-container">
+  <router-outlet></router-outlet>
+</div>
