--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url("https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
+  margin: 0;
+  font-family: "Lobster Two", cursive;
+  font-family: "Noto Sans", sans-serif;
+}
+
+h3 {
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.h4-title {
+  font-weight: 400;
+}
