add reusable css class in project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,11 @@
 <div class="outlet-container">
   <router-outlet></router-outlet>
 </div>
+
+
+
+
+
+<!-- <h3>Dynamic Outer Module Load</h3>
+
+<h3>Dynamic Inner Module Load</h3> -->
