--- a/src/app/dynamic/dynamic-admin/dynamic-admin.component.html
+++ b/src/app/dynamic/dynamic-admin/dynamic-admin.component.html
@@ -1,5 +1,5 @@
-<h3>Dynamic Component Load</h3>
-<ul class="dynamic-admin">
+<h3>Dynamic Admin Inner Module Load</h3>
+<ul class="inner-module-nav">
   <li><a routerLink="dynamic-data">Dynamic-Data</a></li>
   <li><a routerLink="dynamic-list">Dynamic-List</a></li>
   <li><a routerLink="dynamic-user">Dynamic-User</a></li>
