--- a/src/app/dynamic/dynamic-dashboard/dynamic-dashboard.component.html
+++ b/src/app/dynamic/dynamic-dashboard/dynamic-dashboard.component.html
@@ -1,5 +1,5 @@
-<h3>Dynamic Component Load</h3>
-<ul class="dynamic-dash">
+<h3>Dynamic Dashboard Inner Module Load</h3>
+<ul class="inner-module-nav">
   <li><a routerLink="dynamic-item">Dynamic-Item</a></li>
   <li><a routerLink="dynamic-order">Dynamic-Order</a></li>
 </ul>
