--- a/src/app/dynamic/dynamic.component.html
+++ b/src/app/dynamic/dynamic.component.html
@@ -1,6 +1,6 @@
-<h3>Dynamic Component Load</h3>
+<h3>Dynamic Outer Module Load</h3>
 <div class="main-navbar">
-  <ul class="dynamic-nav">
+  <ul class="outer-module-nav">
     <li><a routerLink="dynamic-admin">Dynamic-Admin</a></li>
     <li><a routerLink="dynamic-dashboard">Dynamic-Dashboard</a></li>
   </ul>
