--- a/src/app/employee/employee-admin/employee-admin.component.html
+++ b/src/app/employee/employee-admin/employee-admin.component.html
@@ -1,5 +1,5 @@
 <h3>Employee Admin Load</h3>
-<ul class="employee-admin">
+<ul class="inner-module-nav">
   <li><a routerLink="employee-data">Employee-Data</a></li>
   <li><a routerLink="employee-list">Employee-List</a></li>
   <li><a routerLink="employee-user">Employee-User</a></li>
