--- a/src/app/employee/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/employee/employee-dashboard/employee-dashboard.component.html
@@ -1,5 +1,5 @@
 <h3>Employee Dashboard Load</h3>
-<ul class="employee-dash">
+<ul class="inner-module-nav">
   <li><a routerLink="employee-item">Employee-Item</a></li>
   <li><a routerLink="employee-order">Employee-Order</a></li>
 </ul>
