--- a/src/app/employee/employee-tag/employee-tag.component.html
+++ b/src/app/employee/employee-tag/employee-tag.component.html
@@ -1,5 +1,5 @@
 <h3>Employee Tag Load</h3>
-<ul class="employee-tag">
+<ul class="inner-module-nav">
   <li><a routerLink="employee-add">Employee-Add</a></li>
   <li><a routerLink="employee-move">Employee-Move</a></li>
 </ul>
