--- a/src/app/student/student-tag/student-tag.component.html
+++ b/src/app/student/student-tag/student-tag.component.html
@@ -1,5 +1,5 @@
 <h3>Student Tag Load</h3>
-<ul class="student-tag">
+<ul class="inner-module-nav">
   <li><a routerLink="student-add">student-Add</a></li>
   <li><a routerLink="student-rejoin">student-Rejoin</a></li>
   <li><a routerLink="student-remove">student-Remove</a></li>
