--- a/src/app/user/user-admin/user-admin.component.html
+++ b/src/app/user/user-admin/user-admin.component.html
@@ -1,5 +1,5 @@
 <h3>User Admin Load</h3>
-<ul class="user-admin">
+<ul class="inner-module-nav">
   <li><a routerLink="user-data">User-Data</a></li>
   <li><a routerLink="user-user">User-User</a></li>
 </ul>
