--- a/src/app/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/user/user-dashboard/user-dashboard.component.html
@@ -1,5 +1,5 @@
 <h3>User Dashboard Load</h3>
-<ul class="user-admin">
+<ul class="inner-module-nav">
   <li><a routerLink="user-item">User-Item</a></li>
   <li><a routerLink="user-order">User-Order</a></li>
   <li><a routerLink="user-track">User-Track</a></li>
