--- a/src/app/user/user-tag/user-tag.component.html
+++ b/src/app/user/user-tag/user-tag.component.html
@@ -1,5 +1,5 @@
 <h3>User Tag Load</h3>
-<ul class="user-tag">
+<ul class="inner-module-nav">
   <li><a routerLink="user-add">User-Add</a></li>
   <li><a routerLink="user-leave">User-Leave</a></li>
   <li><a routerLink="user-work">User-Work</a></li>
