--- a/src/app/user/user-title/user-title.component.html
+++ b/src/app/user/user-title/user-title.component.html
@@ -1,5 +1,5 @@
 <h3>User Title Load</h3>
-<ul class="user-title">
+<ul class="inner-module-nav">
   <li><a routerLink="user-cancel">User-Cancel</a></li>
   <li><a routerLink="user-first">User-First</a></li>
   <li><a routerLink="user-last">User-Last</a></li>
