--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,6 +1,6 @@
 <h3>Employee Component Load</h3>
 <div class="main-navbar">
-  <ul class="employee-nav">
+  <ul class="outer-module-nav">
     <li><a routerLink="employee-admin">Employee-Admin</a></li>
     <li><a routerLink="employee-dashboard">Employee-Dashboard</a></li>
     <li><a routerLink="employee-tag">Employee-Tag</a></li>
