--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,11 +1,9 @@
 <h3>Student Component Load</h3>
-<div class="main-navbar">
-  <ul class="student-nav">
+  <ul class="outer-module-nav">
     <li><a routerLink="student-admin">Student-Admin</a></li>
     <li><a routerLink="student-dashboard">Student-Dashboard</a></li>
     <li><a routerLink="student-tag">Student-Tag</a></li>
   </ul>
-</div>
 <div class="outlet-container">
   <router-outlet></router-outlet>
 </div>
