--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
   font-family: "Noto Sans", sans-serif;
 }
 
+/*--------------------- Component Title -----------------------*/
 h3 {
   font-weight: 600;
   margin-bottom: 10px;
@@ -15,4 +16,80 @@ h3 {
 
 .h4-title {
   font-weight: 400;
+}
+
+/*--------------------- Outer Module Navbar -----------------------*/
+.outer-module-nav {
+  width: 98%;
+  display: inline-flex;
+  padding: 20px 15px 20px 15px;
+  margin: 0;
+  border-radius: 5px;
+  font-size: 17px;
+  letter-spacing: 0.5px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  background: rgb(233, 0, 175);
+}
+
+.outer-module-nav li {
+  list-style: none;
+  cursor: pointer;
+}
+
+.outer-module-nav li:hover a {
+  background: rgb(255, 221, 0);
+  padding: 20px 20px 20px 20px;
+  color: #000 !important;
+}
+
+.outer-module-nav li a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  padding: 20px 20px 20px 20px;
+}
+
+.outer-module-nav li a:hover {
+  text-decoration: none;
+}
+
+/*--------------------- Inner Component Navbar -----------------------*/
+.inner-module-nav {
+  width: 98%;
+  display: inline-flex;
+  padding: 13px 10px 13px 10px;
+  margin: 0;
+  border-radius: 5px;
+  font-size: 17px;
+  letter-spacing: 0.5px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  background: rgb(0, 197, 171);
+}
+
+.inner-module-nav li {
+  list-style: none;
+  cursor: pointer;
+}
+
+.inner-module-nav li:hover a {
+  background: rgb(238, 69, 2);
+  padding: 13px 20px 13px 20px;
+  color: rgb(255, 255, 255) !important;
+}
+
+.inner-module-nav li a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  padding: 20px 20px 20px 20px;
+}
+
+.inner-module-nav li a:hover {
+  text-decoration: none;
+}
+
+/*--------------------- Display Outlet Container -----------------------*/
+.outlet-container {
+  margin: 20px 15px;
+  padding: 10px 20px 10px 20px;
+  border: 1px solid rgba(233, 0, 175, 0.5);
+  border-radius: 10px;
 }
