change the module title name

--- a/src/app/dynamic/dynamic-admin/dynamic-admin.component.html
+++ b/src/app/dynamic/dynamic-admin/dynamic-admin.component.html
@@ -1,4 +1,4 @@
-<h3>Dynamic Admin Inner Module Load</h3>
+<h3>Dynamic-Admin Inner Module Load</h3>
 <ul class="inner-module-nav">
   <li><a routerLink="dynamic-data">Dynamic-Data</a></li>
   <li><a routerLink="dynamic-list">Dynamic-List</a></li>
