--- a/src/app/employee/employee-admin/employee-admin.component.html
+++ b/src/app/employee/employee-admin/employee-admin.component.html
@@ -1,4 +1,4 @@
-<h3>Employee Admin Load</h3>
+<h3>Employee-Admin Inner Module Load</h3>
 <ul class="inner-module-nav">
   <li><a routerLink="employee-data">Employee-Data</a></li>
   <li><a routerLink="employee-list">Employee-List</a></li>
