--- a/src/app/employee/employee-tag/employee-tag.component.html
+++ b/src/app/employee/employee-tag/employee-tag.component.html
@@ -1,4 +1,4 @@
-<h3>Employee Tag Load</h3>
+<h3>Employee-Tag Inner Module Load</h3>
 <ul class="inner-module-nav">
   <li><a routerLink="employee-add">Employee-Add</a></li>
   <li><a routerLink="employee-move">Employee-Move</a></li>
