--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,4 +1,4 @@
-<h3>Employee Component Load</h3>
+<h3>Employee Outer Module Load</h3>
 <div class="main-navbar">
   <ul class="outer-module-nav">
     <li><a routerLink="employee-admin">Employee-Admin</a></li>
