--- a/src/app/student/student-admin/student-admin.component.html
+++ b/src/app/student/student-admin/student-admin.component.html
@@ -1,4 +1,4 @@
-<h3>Student Admin Load</h3>
+<h3>Student-Admin Inner Module Load</h3>
 <ul class="inner-module-nav">
   <li><a routerLink="student-data">student-Data</a></li>
   <li><a routerLink="student-user">student-User</a></li>
