--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,4 +1,4 @@
-<h3>Student Component Load</h3>
+<h3>Student Outer Module Load</h3>
   <ul class="outer-module-nav">
     <li><a routerLink="student-admin">Student-Admin</a></li>
     <li><a routerLink="student-dashboard">Student-Dashboard</a></li>
