--- a/src/app/user/user-admin/user-admin.component.html
+++ b/src/app/user/user-admin/user-admin.component.html
@@ -1,4 +1,4 @@
-<h3>User Admin Load</h3>
+<h3>User-Admin Inner Module Load</h3>
 <ul class="inner-module-nav">
   <li><a routerLink="user-data">User-Data</a></li>
   <li><a routerLink="user-user">User-User</a></li>
