--- a/src/app/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/user/user-dashboard/user-dashboard.component.html
@@ -1,4 +1,4 @@
-<h3>User Dashboard Load</h3>
+<h3>User-Dashboard Inner Module Load</h3>
 <ul class="inner-module-nav">
   <li><a routerLink="user-item">User-Item</a></li>
   <li><a routerLink="user-order">User-Order</a></li>
