--- a/src/app/user/user-tag/user-tag.component.html
+++ b/src/app/user/user-tag/user-tag.component.html
@@ -1,4 +1,4 @@
-<h3>User Tag Load</h3>
+<h3>User-Tag Inner Module Load</h3>
 <ul class="inner-module-nav">
   <li><a routerLink="user-add">User-Add</a></li>
   <li><a routerLink="user-leave">User-Leave</a></li>
