--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<h3>User Component Load</h3>
+<h3>User Outer Module Load</h3>
 <ul class="outer-module-nav">
   <li><a routerLink="user-admin">User-Admin</a></li>
   <li><a routerLink="user-dashboard">User-Dashboard</a></li>
