--- a/src/app/student/student-dashboard/student-dashboard.component.html
+++ b/src/app/student/student-dashboard/student-dashboard.component.html
@@ -1,4 +1,4 @@
-<h3>Student Dashboard Load</h3>
+<h3>Student-Dashboard Inner Module Load</h3>
 <ul class="inner-module-nav">
   <li><a routerLink="student-item">student-Item</a></li>
   <li><a routerLink="student-order">student-Order</a></li>
