--- a/src/app/user/user-title/user-title.component.html
+++ b/src/app/user/user-title/user-title.component.html
@@ -1,4 +1,4 @@
-<h3>User Title Load</h3>
+<h3>User-Title Inner Module Load</h3>
 <ul class="inner-module-nav">
   <li><a routerLink="user-cancel">User-Cancel</a></li>
   <li><a routerLink="user-first">User-First</a></li>
