add routerLinkActive in all menu item

--- a/src/app/dynamic/dynamic.component.html
+++ b/src/app/dynamic/dynamic.component.html
@@ -1,8 +1,12 @@
 <h3>Dynamic Outer Module Load</h3>
 <div class="main-navbar">
   <ul class="outer-module-nav">
-    <li><a routerLink="dynamic-admin">Dynamic-Admin</a></li>
-    <li><a routerLink="dynamic-dashboard">Dynamic-Dashboard</a></li>
+    <li>
+      <a routerLink="dynamic-admin" routerLinkActive="active">Dynamic-Admin</a>
+    </li>
+    <li>
+      <a routerLink="dynamic-dashboard" routerLinkActive="active">Dynamic-Dashboard</a>
+    </li>
   </ul>
 </div>
 <div class="outlet-container">
