--- a/src/app/employee/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/employee/employee-dashboard/employee-dashboard.component.html
@@ -1,7 +1,7 @@
 <h3>Employee-Dashboard Inner Module Load</h3>
 <ul class="inner-module-nav">
-  <li><a routerLink="employee-item">Employee-Item</a></li>
-  <li><a routerLink="employee-order">Employee-Order</a></li>
+  <li><a routerLink="employee-item" routerLinkActive="active">Employee-Item</a></li>
+  <li><a routerLink="employee-order" routerLinkActive="active">Employee-Order</a></li>
 </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
