--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,9 +1,9 @@
 <h3>Employee Outer Module Load</h3>
 <div class="main-navbar">
   <ul class="outer-module-nav">
-    <li><a routerLink="employee-admin">Employee-Admin</a></li>
-    <li><a routerLink="employee-dashboard">Employee-Dashboard</a></li>
-    <li><a routerLink="employee-tag">Employee-Tag</a></li>
+    <li><a routerLink="employee-admin" routerLinkActive="active">Employee-Admin</a></li>
+    <li><a routerLink="employee-dashboard" routerLinkActive="active">Employee-Dashboard</a></li>
+    <li><a routerLink="employee-tag" routerLinkActive="active">Employee-Tag</a></li>
   </ul>
 </div>
 <div class="outlet-container">
