--- a/src/app/student/student-admin/student-admin.component.html
+++ b/src/app/student/student-admin/student-admin.component.html
@@ -1,7 +1,7 @@
 <h3>Student-Admin Inner Module Load</h3>
 <ul class="inner-module-nav">
-  <li><a routerLink="student-data">student-Data</a></li>
-  <li><a routerLink="student-user">student-User</a></li>
+  <li><a routerLink="student-data" routerLinkActive="active">student-Data</a></li>
+  <li><a routerLink="student-user" routerLinkActive="active">student-User</a></li>
 </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
