--- a/src/app/student/student-dashboard/student-dashboard.component.html
+++ b/src/app/student/student-dashboard/student-dashboard.component.html
@@ -1,7 +1,7 @@
 <h3>Student-Dashboard Inner Module Load</h3>
 <ul class="inner-module-nav">
-  <li><a routerLink="student-item">student-Item</a></li>
-  <li><a routerLink="student-order">student-Order</a></li>
+  <li><a routerLink="student-item" routerLinkActive="active">student-Item</a></li>
+  <li><a routerLink="student-order" routerLinkActive="active">student-Order</a></li>
 </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
