--- a/src/app/student/student-tag/student-tag.component.html
+++ b/src/app/student/student-tag/student-tag.component.html
@@ -1,8 +1,8 @@
 <h3>Student-Tag Inner Module Load</h3>
 <ul class="inner-module-nav">
-  <li><a routerLink="student-add">student-Add</a></li>
-  <li><a routerLink="student-rejoin">student-Rejoin</a></li>
-  <li><a routerLink="student-remove">student-Remove</a></li>
+  <li><a routerLink="student-add" routerLinkActive="active">student-Add</a></li>
+  <li><a routerLink="student-rejoin" routerLinkActive="active">student-Rejoin</a></li>
+  <li><a routerLink="student-remove" routerLinkActive="active">student-Remove</a></li>
 </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
