--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,8 +1,8 @@
 <h3>Student Outer Module Load</h3>
   <ul class="outer-module-nav">
-    <li><a routerLink="student-admin">Student-Admin</a></li>
-    <li><a routerLink="student-dashboard">Student-Dashboard</a></li>
-    <li><a routerLink="student-tag">Student-Tag</a></li>
+    <li><a routerLink="student-admin" routerLinkActive="active">Student-Admin</a></li>
+    <li><a routerLink="student-dashboard" routerLinkActive="active">Student-Dashboard</a></li>
+    <li><a routerLink="student-tag" routerLinkActive="active">Student-Tag</a></li>
   </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
