--- a/src/app/user/user-admin/user-admin.component.html
+++ b/src/app/user/user-admin/user-admin.component.html
@@ -1,7 +1,7 @@
 <h3>User-Admin Inner Module Load</h3>
 <ul class="inner-module-nav">
-  <li><a routerLink="user-data">User-Data</a></li>
-  <li><a routerLink="user-user">User-User</a></li>
+  <li><a routerLink="user-data" routerLinkActive="active">User-Data</a></li>
+  <li><a routerLink="user-user" routerLinkActive="active">User-User</a></li>
 </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
