--- a/src/app/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/user/user-dashboard/user-dashboard.component.html
@@ -1,8 +1,8 @@
 <h3>User-Dashboard Inner Module Load</h3>
 <ul class="inner-module-nav">
-  <li><a routerLink="user-item">User-Item</a></li>
-  <li><a routerLink="user-order">User-Order</a></li>
-  <li><a routerLink="user-track">User-Track</a></li>
+  <li><a routerLink="user-item" routerLinkActive="active">User-Item</a></li>
+  <li><a routerLink="user-order" routerLinkActive="active">User-Order</a></li>
+  <li><a routerLink="user-track" routerLinkActive="active">User-Track</a></li>
 </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
