--- a/src/app/user/user-tag/user-tag.component.html
+++ b/src/app/user/user-tag/user-tag.component.html
@@ -1,8 +1,8 @@
 <h3>User-Tag Inner Module Load</h3>
 <ul class="inner-module-nav">
-  <li><a routerLink="user-add">User-Add</a></li>
-  <li><a routerLink="user-leave">User-Leave</a></li>
-  <li><a routerLink="user-work">User-Work</a></li>
+  <li><a routerLink="user-add" routerLinkActive="active">User-Add</a></li>
+  <li><a routerLink="user-leave" routerLinkActive="active">User-Leave</a></li>
+  <li><a routerLink="user-work" routerLinkActive="active">User-Work</a></li>
 </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
