--- a/src/app/user/user-title/user-title.component.html
+++ b/src/app/user/user-title/user-title.component.html
@@ -1,9 +1,9 @@
 <h3>User-Title Inner Module Load</h3>
 <ul class="inner-module-nav">
-  <li><a routerLink="user-cancel">User-Cancel</a></li>
-  <li><a routerLink="user-first">User-First</a></li>
-  <li><a routerLink="user-last">User-Last</a></li>
-  <li><a routerLink="user-middle">User-Middle</a></li>
+  <li><a routerLink="user-cancel" routerLinkActive="active">User-Cancel</a></li>
+  <li><a routerLink="user-first" routerLinkActive="active">User-First</a></li>
+  <li><a routerLink="user-last" routerLinkActive="active">User-Last</a></li>
+  <li><a routerLink="user-middle" routerLinkActive="active">User-Middle</a></li>
 </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
