--- a/src/app/dynamic/dynamic-admin/dynamic-admin.component.html
+++ b/src/app/dynamic/dynamic-admin/dynamic-admin.component.html
@@ -1,8 +1,8 @@
 <h3>Dynamic-Admin Inner Module Load</h3>
 <ul class="inner-module-nav">
-  <li><a routerLink="dynamic-data">Dynamic-Data</a></li>
-  <li><a routerLink="dynamic-list">Dynamic-List</a></li>
-  <li><a routerLink="dynamic-user">Dynamic-User</a></li>
+  <li><a routerLink="dynamic-data" routerLinkActive="active">Dynamic-Data</a></li>
+  <li><a routerLink="dynamic-list" routerLinkActive="active">Dynamic-List</a></li>
+  <li><a routerLink="dynamic-user" routerLinkActive="active">Dynamic-User</a></li>
 </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
