--- a/src/app/dynamic/dynamic-dashboard/dynamic-dashboard.component.html
+++ b/src/app/dynamic/dynamic-dashboard/dynamic-dashboard.component.html
@@ -1,7 +1,7 @@
 <h3>Dynamic-Dashboard Inner Module Load</h3>
 <ul class="inner-module-nav">
-  <li><a routerLink="dynamic-item">Dynamic-Item</a></li>
-  <li><a routerLink="dynamic-order">Dynamic-Order</a></li>
+  <li><a routerLink="dynamic-item" routerLinkActive="active">Dynamic-Item</a></li>
+  <li><a routerLink="dynamic-order" routerLinkActive="active">Dynamic-Order</a></li>
 </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
