--- a/src/app/employee/employee-admin/employee-admin.component.html
+++ b/src/app/employee/employee-admin/employee-admin.component.html
@@ -1,8 +1,8 @@
 <h3>Employee-Admin Inner Module Load</h3>
 <ul class="inner-module-nav">
-  <li><a routerLink="employee-data">Employee-Data</a></li>
-  <li><a routerLink="employee-list">Employee-List</a></li>
-  <li><a routerLink="employee-user">Employee-User</a></li>
+  <li><a routerLink="employee-data" routerLinkActive="active">Employee-Data</a></li>
+  <li><a routerLink="employee-list" routerLinkActive="active">Employee-List</a></li>
+  <li><a routerLink="employee-user" routerLinkActive="active">Employee-User</a></li>
 </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
