--- a/src/app/employee/employee-tag/employee-tag.component.html
+++ b/src/app/employee/employee-tag/employee-tag.component.html
@@ -1,7 +1,7 @@
 <h3>Employee-Tag Inner Module Load</h3>
 <ul class="inner-module-nav">
-  <li><a routerLink="employee-add">Employee-Add</a></li>
-  <li><a routerLink="employee-move">Employee-Move</a></li>
+  <li><a routerLink="employee-add" routerLinkActive="active">Employee-Add</a></li>
+  <li><a routerLink="employee-move" routerLinkActive="active">Employee-Move</a></li>
 </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
