--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,9 +1,9 @@
 <h3>User Outer Module Load</h3>
 <ul class="outer-module-nav">
-  <li><a routerLink="user-admin">User-Admin</a></li>
-  <li><a routerLink="user-dashboard">User-Dashboard</a></li>
-  <li><a routerLink="user-tag">User-Tag</a></li>
-  <li><a routerLink="user-title">User-Title</a></li>
+  <li><a routerLink="user-admin" routerLinkActive="active">User-Admin</a></li>
+  <li><a routerLink="user-dashboard" routerLinkActive="active">User-Dashboard</a></li>
+  <li><a routerLink="user-tag" routerLinkActive="active">User-Tag</a></li>
+  <li><a routerLink="user-title" routerLinkActive="active">User-Title</a></li>
 </ul>
 <div class="outlet-container">
   <router-outlet></router-outlet>
